fixed uneven spacing between Date and category (#995)
* fixed uneven spacing between Date and category

* changing the css of error message

* fixed spacing

--- a/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
+++ b/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
@@ -272,6 +272,7 @@
   &--project-block {
     flex-grow: 1;
     margin-right: 26px;
+    margin-top: -12px;
   }
 
   &--primary-block {
@@ -606,8 +607,8 @@
   &--error {
     color: $red;
     line-height: 16px;
-    margin-top: -12px;
     font-size: 12px;
+    margin-top: -12px;
   }
 
   &--amount-error {
